2008-09-29  Sven Herzberg  <sven@imendio.com>

	Respect TESTS_ENVIRONMENT as "make check" usually does

	* Makefile.decl: added TESTS_ENVIRONMENT to the test invocation

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added the first testcase

	* tests/Makefile.am,
	* tests/double-free.c: the first testcase

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added --enable-debug to define ENABLE_DEBUG properly; define
	automatically for developer builds

	* autogen.sh: pass --enable-debug to the configure script
	* configure.in: accept --enable-debug and set ENABLE_DEBUG properly

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Added a folder for the tests

	* Makefile.am: include tests
	* configure.in: build tests/Makefile
	* tests/Makefile.am: skeleton

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Add GTest support to the build system

	* Makefile.decl: file copied and adjusted to the project needs
	* Makefile.am,
	* demos/Makefile.am,
	* engine/Makefile.am,
	* protocol/Makefile.am,
	* server/Makefile.am: include Makefile.decl to support gtest
	everywhere

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Fix a possible double-free intorduced by r15921

	* server/sapwood-server.c (process_buffer): drop the g_free() call on
	the node; the g_hash_table_remove() will care about this

2008-09-03  Sven Herzberg  <sven@imendio.com>

	added missing files

	* protocol/Makefile.am,
	* protocol/sapwood-proto.c,
	* protocol/sapwood-proto.h,
	* server/Makefile.am,
	* server/sapwood-server.c: added missing files

2008-09-03  Sven Herzberg  <sven@imendio.com>

	Split the code into server, protocol and engine parts
	based on a patch by Christian Dywan

	* engine/Makefile.am,
	* engine/abicheck.sh,
	* engine/sapwood-main.c
	* engine/sapwood-pixmap.c
	* engine/sapwood-pixmap.h,
	* engine/sapwood-proto.c,
	* engine/sapwood-proto.h,
	* engine/sapwood-rc-style.c
	* engine/sapwood-rc-style.h,
	* engine/sapwood-server.c,
	* engine/sapwood-style.c
	* engine/sapwood-style.h,