@@ -1,0 +1,17 @@
+#!/bin/bash
+export GTK_PATH=/home/herzi/Hacking/Maemo/prefix/lib/gtk-2.0
+export GTK2_RC_FILES=/home/herzi/Hacking/Maemo/prefix/share/themes/devel/gtk-2.0/gtkrc
+export SAPWOOD_SERVER_DEBUG=1
+
+if test $# -eq 0; then
+        echo "Usage: $0 <command> [args]" >&2
+        return 1
+fi
+
+DISPLAY=:0 ../server/sapwood-server &
+
+export $(grep ^top_srcdir Makefile | sed 's/ = /=/')
+sleep 1
+$@ || echo "$@: return value: $?"
+
+kill %- # %- : last job started : http://tldp.org/LDP/abs/html/x8885.html#JOBIDTABLE
